# z-ingest

./: .env.example  .gitignore  BIDIRECTIONAL_COMMUNICATION.md  DASHBOARD_SETUP.md  Dockerfile.alloy  Dockerfile.grafana  Dockerfile.prometheus  GRAFANA_MONITORING.md  MONITORING_SETUP.md  PROMETHEUS.md  README.md  REDIS_PUBSUB_GUIDE.md  SERVICES_EXPLAINED.md  alloy-config-railway.alloy  docker-compose.yml  prometheus.yml  pyproject.toml  railway-alloy.json  requirements.txt
app/: config.py  main.py
app/api/: rest.py  websocket.py
app/core/: buffer.py  connections.py  handlers.py  metrics.py
app/db/: database.py  models.py  persistence.py
scripts/: subscribe_to_stream.py  test_consumer_predictions.py
tests/: README.md  test_redis_pubsub.py
